# UCAS_2025_AIMA_Project

./: .gitattributes  .gitignore  README.md  model.py  pipeline_Train_Test.ipynb  pipeline_pretrain_train_test.ipynb
PENS-Personalized-News-Headline-Generation/: USE.md  code_modify.md  predict_with_trained_model.ipynb  predict_with_trained_model.py  pyproject.toml  upgrade.md
PENS-Personalized-News-Headline-Generation/pensmodule.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PENS-Personalized-News-Headline-Generation/pensmodule/Generator/: eval.py  pipeline_pretrain_train_test.html  pipeline_pretrain_train_test.ipynb  train.py
PENS-Personalized-News-Headline-Generation/pensmodule/Preprocess/: data_structure.md  executed_preprocess.ipynb  npy.md  preprocess.html  preprocess.ipynb
PENS-Personalized-News-Headline-Generation/pensmodule/UserEncoder/: model.py  pipeline_Train_Test.html  pipeline_Train_Test.ipynb
PENS-Personalized-News-Headline-Generation/prompt_engineering_approach/: README.md  api_config.py  api_config_template.py  config.py  data_processor.py  evaluator.py  llm_client.py  main.py  prompt_engineering_pipeline.ipynb  prompt_generator.py  requirements.txt
PENS-Personalized-News-Headline-Generation/prompt_engineering_approach/outputs/evaluation_results/: detailed_evaluation_20250619_004721.json  detailed_evaluation_20250621_163758.json  detailed_evaluation_20250622_202627.json  detailed_evaluation_20250622_212308.json
PENS-Personalized-News-Headline-Generation/prompt_engineering_approach/outputs/processed_data/: data_stats.json  (+3 more)
(+19 files in other folders)
