[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pensmodule"
version = "0.10"
authors = [
  { name = "ICT&Microsoft" }
]
description = "PENS Personalized News Headline Generation Module"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "pandas>=1.1.5",
  "rouge>=0.3.1",
  "tensorboardX>=1.9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pensmodule*"]

[tool.setuptools]
include-package-data = true
